# llalobos-api

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
.sqlx/: query-0e4bcebef94c553b2d6c938990af242fc98625b7e11c6f85f1503bb73f8a0066.json  query-3662e9c990bff111031952acf820f7073c054f3bdf006fc710764fe1d7441521.json  query-5afb4d58da123976ced31d5f47995277aeb09b3ac6123e3da461bc6988b87391.json  query-7d6a4b37a75b634dededf2307cdbd79361534e8d91f2e4a257c2668f9ccce197.json  query-a218db57bde84df6239a42f29dcfa3180bcf4b66e12a2bc8c2d4f71a10e79e69.json  query-b55dbcca3bb9f622a14ba004d84cf558bb599ace0dac8977301fb2ef78458180.json  query-c9338d62760ee947a0026b32a6925ad422f5919220548b95830c82133ac8adb9.json  query-ccfae877e92305fb128bac20e2afe69bca05eb262b74bd93f9a1ee83fb613bf6.json  query-d43be40288410b27f495c0afcb8068b9586219f57b2e4dbd493c3c7df258c30c.json
scripts/: README.md  configure_mercadopago.sh  init.sql  process_mercadopago.sh  report.first.json  report.prod.json  report.test.json  reverse_proxy.sh  settlement-report.csv
src/: agenda.rs  config.rs  context.rs  event_filter.rs  funds.rs  goal.rs  main.rs  news.rs  pagination.rs  params.rs  shutdown.rs  transaction.rs
